[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuttut"
version = "0.0.6"
authors = [
  { name="Nathan Candre", email="nathan.candre@gmail.com" },
]
description = "A package to convert MIDI files to string instrument tabs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.9.2",
    "networkx==2.8.6",
    "numpy==1.26.4",
    "pretty_midi==0.2.9",
    "eel==0.17.0",
]

[project.urls]
Homepage = "https://github.com/natecdr/tuttut"
Issues = "https://github.com/natecdr/tuttut/issues"

[project.gui-scripts]
tuttut = "tuttut.midi_tabs_gui:run"
